@@ -3,6 +3,7 @@ package ru.job4j.collection;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.*;
@@ -11,8 +12,8 @@ public class ConvertList2ArrayTest {
 
     @Test
     public void when7ElementsThen9() {
-        ConvertList2Array list = new ConvertList2Array();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3);
+
+        int[][] result = ConvertList2Array.toArray(List.of(1, 2, 3, 4, 5, 6, 7), 3);
         int[][] expect = {{1, 2, 3},
                 {4, 5, 6},
                 {7, 0, 0}
