@@ -12,10 +12,11 @@ public class ConvertListTest {
 
     @Test
     public void whenTwoList() {
-        List<int[]> in = new ArrayList<>();
-        in.add(new int[]{1});
-        in.add(new int[]{2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
-        assertEquals(ConvertList.convert(in), expect);
+        List<int[]> in = List.of(
+                new int[]{1},
+                new int[]{2, 3});
+
+        List<Integer> expect = List.of(1, 2, 3);
+        assertEquals(expect, ConvertList.convert(in));
     }
 }
