@@ -12,8 +12,8 @@ public class DepartmentsTest {
 
     @Test
     public void fillGapsWhenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertEquals(expect, result);
@@ -21,8 +21,8 @@ public class DepartmentsTest {
 
     @Test
     public void fillGapsWhenNoMissed() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertEquals(expect, result);
@@ -30,8 +30,8 @@ public class DepartmentsTest {
 
     @Test
     public void sortAsc() {
-        List<String> input = Arrays.asList("k1/sk1/ssk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk1");
+        List<String> input = List.of("k1/sk1/ssk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertEquals(expect, result);
@@ -39,8 +39,8 @@ public class DepartmentsTest {
 
     @Test
     public void sortDesc() {
-        List<String> input = Arrays.asList("k1/sk1/ssk1", "k2/sk1");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k1", "k1/sk1", "k1/sk1/ssk1");
+        List<String> input = List.of("k1/sk1/ssk1", "k2/sk1");
+        List<String> expect = List.of("k2", "k2/sk1", "k1", "k1/sk1", "k1/sk1/ssk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertEquals(expect, result);
@@ -48,8 +48,8 @@ public class DepartmentsTest {
 
     @Test
     public void sortDesc2() {
-        List<String> input = Arrays.asList("j1/sj1/ssj1", "j2/sj1");
-        List<String> expect = Arrays.asList("j2", "j2/sj1", "j1", "j1/sj1", "j1/sj1/ssj1");
+        List<String> input = List.of("j1/sj1/ssj1", "j2/sj1");
+        List<String> expect = List.of("j2", "j2/sj1", "j1", "j1/sj1", "j1/sj1/ssj1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertEquals(expect, result);
