@@ -13,11 +13,11 @@ public class FullSearchTest {
 
     @Test
     public void extractNumber() {
-        List<Task> tasks = Arrays.asList(new Task("1", "First desc"),
+        List<Task> tasks = List.of(new Task("1", "First desc"),
                 new Task("2", "Second desc"),
                 new Task("3", "Third task")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2", "3"));
+        Set<String> expected = new HashSet<>(Set.of("1", "2", "3"));
         assertEquals(FullSearch.extractNumber(tasks), expected);
     }
 
